# CarbonSenseAI

./: README.md
AI_GreenHouseCredits-main/: .dockerignore  .env.example  .gitignore  CODE_REVIEW_SUMMARY.md  COMPLIANCE_INTEGRATION.md  DOCKER_DEPLOYMENT.md  Dockerfile  LICENSE  ai_agents.py  app.py  carbon_compliance.py  config.py  data_handler.py  docker-compose.yml  docker-manage.sh  emission_factors.py  emissions_analysis.py  pyproject.toml  report_generator.py  requirements.txt  test_setup.py
